# TactiFootVision

./: .gitignore  README.md  basketball_ai.py  football_ai.py  generate_advanced_plots.py  generate_combo_chart.py  generate_plots.py  generate_presentation_plots.py  generate_raincloud_v2.py  generate_video_xg_presentation_visuals.py  pyproject.toml  test.ipynb
config/: default_config.yaml  models.py  synloc_loaders.py  synloc_models.py
configs/datasets/: soccernet_tracking_coco_smoke.yaml
configs/experiments/: homography_comparison_smoke.yaml  homography_comparison_valid_current_oracle.yaml  homography_comparison_valid_local.yaml  homography_comparison_valid_subset.yaml  soccernet_detection_tracking.yaml  soccernet_detection_tracking_smoke.yaml  team_classification_smoke.yaml  video_xg_end_to_end_fa_wsl.yaml  video_xg_end_to_end_fa_wsl_winners_10fps.yaml  video_xg_end_to_end_fa_wsl_winners_10fps_precision.yaml  video_xg_fp_reduction_fa_wsl_10fps.yaml  video_xg_improvement_fa_wsl.yaml  video_xg_stage_1_ball.yaml  video_xg_stage_2_shots.yaml  video_xg_stage_3_xg.yaml
configs/pipeline/: fake_bytetrack.yaml  fake_sam2_tracking.yaml  rfdetr_model_smoke.yaml  rfdetr_seg_model_smoke.yaml  yolo_bytetrack_smoke.yaml  yolo_model_smoke.yaml  yolo_pose_projection_smoke.yaml  yolo_sam2_smoke.yaml
docs/: architecture.md  classification.md  detection_tracking.md  experiment_summary.md  homography_backends.md  homography_comparison_experiment_results.md  homography_hard_numbers_comparison.md  homography_qualitative_comparison.md  homography_slide_brief_for_agent.md  migration.md  project.md  sam2_iteration_log.md  synloc_author_baseline_sources.md
docs/video_xg/: end_to_end_report.md  improvement_report.md  metrics.csv  report.md  research.md  video_only_protocol.md  video_only_xg_presentation_plan.md  video_only_xg_project_summary.md
experiments/: run_fa_wsl_video_only_xg.py
experiments/team_classification_quick/: backup_2025-02-05.md  metrics.csv  plot_results.py
legacy/config/: loaders.py  models.py
legacy/run_config/: test_soccernet_tracking.env.example
legacy/scripts/: apply_bbox_ema_smoothing.py  build_full_coco_dataset.py  build_presentation_demo.py  build_statsbomb_full.py  compare_tracking_models.py  compute_stability_metrics.py  eval_statsbomb360.py  evaluate_existing_soccernet_inference.py  evaluate_soccernet_tracking.py  generate_advanced_plots.py  generate_dumbbell_plot.py  generate_visualization_graphics.py  plot_inference_fps_boxplot.py  plot_map_vs_fps.py  plot_positional_error_ridgeplot.py  plot_stability_metrics.py  plot_team_classification_publication.py  plot_tracking_presentation.py  plot_training_map_comparison.py  prepare_soccernet_tracking_coco.py  prepare_statsbomb360_ridgeplot_data.py  reproduce_paper_plot.py  run_detection.py  run_first5_inference_suite.py  run_soccernet_tracking_experiment.py  run_soccernet_train2seq_infer1seq.py  run_trackeval.py  stitch_tracks.py  test.py  train_detector.py  train_full_dataset.py  train_keypoints.py
legacy/tests_legacy/: test_soccernet_tracking.py  test_trajectory_stability.py
notebooks/: video_only_xg_experiment.ipynb
presentation_assets/: layout_notes.md  presentation_plan.md
presentation_assets/slides/: README.md
presentation_assets/video/: generate_homography_radar_pipeline_minimap.py
scripts/: build_synloc_submission.py  evaluate_synloc_val.py  import_author_baseline_results.py  merge_pipeline_statsbomb.py  package_synloc_author_submission.py  prepare_synloc_dataset.py  prepare_synloc_pose_dataset.py  run_detection.py  run_synloc_24h_plan.py  run_synloc_author_baseline.py  run_synloc_inference.py  train_detector.py  train_keypoints.py  train_synloc_detector.py  train_synloc_point_regressor.py
src/tactifoot_vision/: __init__.py  cli.py  enums.py
tests/: test_rfdetr_handler.py  test_synloc.py  test_synloc_24h.py  test_synloc_author_baseline.py  test_synloc_runtime.py  test_synloc_scripts.py
tests/support/: fakes.py
(+225 files in other folders)
