[project]
name = "tactifoot-vision"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Jakub Eichner", email = "redhotdevil996@gmail.com" }
]
dependencies = [
    "numpy>=1.23.0,<=2.1.1",
    "ultralytics>=8.3.98,<9.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "supervision>=0.25.1,<0.26.0",
    "opencv-python-headless>=4.11.0.86,<5.0.0",
    "torch>=2.6.0,<3.0.0",
    "torchvision>=0.21.0,<0.22.0",
    "loguru>=0.7.3,<0.8.0",
    "rfdetr>=1.0.8,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "pyarrow>=19.0.1,<20.0.0",
    "transformers>=4.48.0,<5.0.0",
    "umap-learn>=0.5.7,<0.6.0",
    "scikit-learn>=1.5.2,<1.6.0",
    "pandas>=2.2.0,<3.0.0",
    "pillow>=10.0.1,<11.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "matplotlib>=3.10.1,<4.0.0",
    "statsbombpy>=1.16.0",
]

[project.scripts]
tactifoot = "tactifoot_vision.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.11.2,<0.12.0",
    "types-PyYAML>=6.0.12,<7.0.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tactifoot_vision"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests that are too slow for default CI",
    "model: tests that require local model checkpoints",
    "sam2: tests that require SAM2 checkpoints and config",
]
addopts = "-ra"

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["src/tactifoot_vision"]
strict = false
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_any_generics = false
disable_error_code = ["attr-defined", "call-arg"]
